@@ -1,17 +1,18 @@
 #!/usr/bin/perl
 #
-# AST_phone_update.pl version 2.12
+# AST_phone_update.pl version 2.14
 #
 # DESCRIPTION:
 # checks the registered IP address of the phone and updates the phones table
 #
-# Copyright (C) 2015  Matt Florell <vicidial@gmail.com>    LICENSE: AGPLv2
+# Copyright (C) 2018  Matt Florell <vicidial@gmail.com>    LICENSE: AGPLv2
 #
 # 70521-1529 - first build
 # 100625-1220 - Added waitfors after logout to fix broken pipe errors in asterisk <MikeC>
 # 130625-0947 - Added --agent-lookup option for agent phone_ip population
 # 131210-1305 - Added Asterisk 1.8 compatibility
 # 150610-1200 - Added support for AMI version 1.3
+# 180403-1545 - Updated telnet login process to work with newer Asterisk versions
 #
 
 # constants
@@ -216,16 +217,28 @@ if ( ($sip_count > 0) || ($agent_lookup < 1) )
 
 	### connect to asterisk manager through telnet
 	$t = new Net::Telnet (Port => 5038,
-						  Prompt => '/.*[\$%#>] $/',
+						  Prompt => '/\r\n/',
 						  Output_record_separator => '',);
-	#$fh = $t->dump_log("$telnetlog");  # uncomment for telnet log
+
+	##### uncomment both lines below for telnet log
+	#        $LItelnetlog = "$PATHlogs/phone_telnet_log.txt";
+	#        $fh = $t->dump_log("$LItelnetlog");
+
 	if (length($ASTmgrUSERNAMEsend) > 3) {$telnet_login = $ASTmgrUSERNAMEsend;}
 	else {$telnet_login = $ASTmgrUSERNAME;}
+	$t->open("$telnet_host");
+	$t->waitfor('/Asterisk Call Manager\//');
 
-	$t->open("$telnet_host"); 
-	$t->waitfor('/[0123]\n$/');			# print login
+	# get the AMI version number
+	$ami_version = $t->getline(Errmode => Return, Timeout => 1,);
+	$ami_version =~ s/\n//gi;
+	if ($DB) {print "----- AMI Version $ami_version -----\n";}
+
+	# Login
 	$t->print("Action: Login\nUsername: $telnet_login\nSecret: $ASTmgrSECRET\n\n");
-	$t->waitfor('/Authentication accepted/');		# waitfor auth accepted
+	$t->waitfor('/Authentication accepted/');              # waitfor auth accepted
+
+	$t->buffer_empty;
 
 	$i=0;
 	foreach(@PTextensions)
@@ -344,16 +357,28 @@ if ( ($iax_count > 0) || ($agent_lookup < 1) )
 
 	### connect to asterisk manager through telnet
 	$t = new Net::Telnet (Port => 5038,
-						  Prompt => '/.*[\$%#>] $/',
+						  Prompt => '/\r\n/',
 						  Output_record_separator => '',);
-	#$fh = $t->dump_log("$telnetlog");  # uncomment for telnet log
+
+	##### uncomment both lines below for telnet log
+	#        $LItelnetlog = "$PATHlogs/phone_telnet_log.txt";
+	#        $fh = $t->dump_log("$LItelnetlog");
+
 	if (length($ASTmgrUSERNAMEsend) > 3) {$telnet_login = $ASTmgrUSERNAMEsend;}
 	else {$telnet_login = $ASTmgrUSERNAME;}
+	$t->open("$telnet_host");
+	$t->waitfor('/Asterisk Call Manager\//');
 
-	$t->open("$telnet_host"); 
-	$t->waitfor('/[0123]\n$/');			# print login
+	# get the AMI version number
+	$ami_version = $t->getline(Errmode => Return, Timeout => 1,);
+	$ami_version =~ s/\n//gi;
+	if ($DB) {print "----- AMI Version $ami_version -----\n";}
+
+	# Login
 	$t->print("Action: Login\nUsername: $telnet_login\nSecret: $ASTmgrSECRET\n\n");
-	$t->waitfor('/Authentication accepted/');		# waitfor auth accepted
+	$t->waitfor('/Authentication accepted/');              # waitfor auth accepted
+
+	$t->buffer_empty;
 
 	$i=0;
 	foreach(@PTextensions)
